# Pokemon-Game

./: CMakeLists.txt  README.md  battle.cpp  battle.h  initialize_team.cpp  initialize_team.h  io_functions.py  main.cpp  main.py  move.cpp  move.h  moves.txt  pokeconstant.cpp  pokeconstant.h  pokeconstants.py  pokedata.txt  pokemon.cpp  pokemon.h  pokemon.py  pokemon_main.py  pokemove.py  simulate_battle.cpp  simulate_battle.h  type_chart.txt  type_physical_special.txt
data/: moves.json  pokemon_moves.json  pokemon_stats.json  type_damage.json
include/: PokeMove.h  battle.h  initialize_team.h  io_functions.h  move.h  pokemon.h
src/: CMakeLists.txt  PokeMove.cpp  battle.cpp  initialize_team.cpp  io_functions.cpp  main.cpp  move.cpp  pokemon.cpp
